...
                                        <rect key="frame" x="80" y="0.0" width="46" height="46"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="46" id="XZs-nX-rth"/>
                                            <constraint firstAttribute="width" constant="46" id="dd9-0B-74E"/>
                                        </constraints>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="home"/>
                                        <state key="selected" image="homeSelected"/>
                                        <connections>
                                            <action selector="tabButtonTapped:" destination="z2u-Bg-D6m" eventType="touchUpInside" id="VLa-8B-g5E"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMm-bx-w7F" customClass="AGBindingButton" customModule="G_Stream" customModuleProvider="target">
...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="46" id="6hy-9C-J4x"/>
                                            <constraint firstAttribute="height" constant="46" id="7Nv-qJ-meG"/>
                                        </constraints>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal">
                                            <imageReference key="image" image="chat" symbolScale="large"/>
                                        </state>
                                        <state key="selected" image="chatSelected"/>
                                        <connections>
                                            <action selector="tabButtonTapped:" destination="z2u-Bg-D6m" eventType="touchUpInside" id="Kox-7C-O27"/>
                                        </connections>
                                    </button>
...
